--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/pubsub": "^3.7.1",
     "express": "^4.18.2"
   },
   "devDependencies": {
@@ -25,6 +26,7 @@
     "@types/node": "^20.3.1",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
+    "dotenv": "^16.1.4",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
     "ts-loader": "^9.4.3",
