--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/pubsub": "^3.7.1",
+    "@google-cloud/tasks": "^4.0.1",
     "express": "^4.18.2"
   },
   "devDependencies": {
